<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="zeus.quantm.greenfood.fragments.SignUpFragment">


    <ScrollView
        android:id="@+id/sv_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/btn_post"
        android:layout_below="@id/tb_main">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <RelativeLayout
                android:id="@+id/rl_layout_empty_image"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:background="@color/colorPrimary">

                <ImageView
                    android:id="@+id/iv_add_image"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="50dp"
                    app:srcCompat="@drawable/ic_add_a_photo_black_24dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/iv_add_image"
                    android:layout_centerHorizontal="true"
                    android:text="@string/upload_avatar_empty"
                    android:textColor="@color/icons"
                    android:textSize="20sp" />

            </RelativeLayout>


            <RelativeLayout
                android:id="@+id/rl_layout_image"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:background="@color/colorPrimary"
                android:visibility="invisible">

                <ImageView
                    android:id="@+id/iv_blur"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop" />

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:alpha="0.4"
                    android:background="#000000"
                    android:scaleType="centerCrop" />

                <zeus.quantm.greenfood.utils.RoundImageView
                    android:id="@+id/iv_avatar"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_centerInParent="true"
                    android:scaleType="centerCrop" />

                <!--<ImageView-->
                <!--android:id="@+id/iv_add_food"-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="match_parent"-->
                <!--android:layout_alignParentStart="true"-->
                <!--android:layout_alignParentTop="true"-->
                <!--android:scaleType="centerCrop" />-->
            </RelativeLayout>


            <RelativeLayout
                android:id="@+id/input"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="50dp"
                android:layout_marginTop="200dp"
                android:padding="16dp">

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/input_layout_full_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_marginTop="10dp">

                    <EditText
                        android:id="@+id/et_full_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/hint_input_full_name"
                        android:inputType="textCapSentences"
                        android:lines="1"
                        android:maxLines="1" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/input_layout_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_below="@+id/input_layout_full_name"
                    android:layout_marginTop="10dp">

                    <EditText
                        android:id="@+id/et_email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/hint_input_email"
                        android:inputType="textEmailAddress" />
                </android.support.design.widget.TextInputLayout>


                <android.support.design.widget.TextInputLayout
                    android:id="@+id/input_layout_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_below="@+id/input_layout_email"
                    app:passwordToggleEnabled="true"
                    android:layout_marginTop="10dp">

                    <EditText
                        android:id="@+id/et_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/hint_input_password"
                        android:inputType="textPassword"/>
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/input_layout_confirm_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_below="@+id/input_layout_password"
                    app:passwordToggleEnabled="true"
                    android:layout_marginTop="10dp">

                    <EditText
                        android:id="@+id/et_confirm_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/hint_input_confirm_password"
                        android:inputType="textPassword" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/input_layout_address"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_below="@+id/input_layout_confirm_password"
                    android:layout_marginTop="10dp">

                    <EditText
                        android:id="@+id/et_address"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/hint_input_user_address"
                        android:inputType="text"
                        android:maxLines="1" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/input_layout_phone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_below="@+id/input_layout_address"
                    android:layout_marginTop="10dp">

                    <EditText
                        android:id="@+id/et_phone"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/hint_input_user_phone"
                        android:inputType="text"
                        android:maxLines="1" />
                </android.support.design.widget.TextInputLayout>

                <android.support.v7.widget.AppCompatButton

                    android:id="@+id/btn_send"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_below="@+id/input_layout_phone"
                    android:layout_marginTop="16dp"
                    android:background="@color/colorAccent"
                    android:padding="12dp"
                    android:text="@string/btn_signup_text"
                    android:textColor="@color/icons" />
            </RelativeLayout>

        </RelativeLayout>

    </ScrollView>

</FrameLayout>
