<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="zeus.quantm.greenfood.activities.AddFoodActivity">

    <RelativeLayout
        android:id="@+id/btn_post"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:background="@color/colorPrimary"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bottom_button_sell"
            android:textColor="@color/icons"
            android:textSize="20sp"
            android:textStyle="bold" />
    </RelativeLayout>

    <android.support.v7.widget.Toolbar
        android:id="@+id/tb_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary" />

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/sv_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/btn_post"
        android:layout_below="@id/tb_main">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <RelativeLayout
                android:id="@+id/rl_layout_empty_image"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:background="@color/colorPrimary"
                android:visibility="invisible">

                <ImageView
                    android:id="@+id/iv_add_image"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="15dp"
                    app:srcCompat="@drawable/ic_add_a_photo_black_24dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/iv_add_image"
                    android:layout_centerHorizontal="true"
                    android:text="@string/upload_image_empty"
                    android:textColor="@color/icons"
                    android:textSize="20sp" />

            </RelativeLayout>


            <RelativeLayout
                android:id="@+id/rl_layout_image"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:background="@color/colorPrimary"
                android:visibility="visible">

                <ImageView
                    android:id="@+id/iv_add_food"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:scaleType="centerCrop" />

                <ImageView
                    android:id="@+id/iv_delete_image"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentTop="true"
                    android:background="@color/colorAccent"
                    app:srcCompat="@drawable/ic_clear_black_24dp" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="150dp"
                android:layout_marginBottom="50dp"
                android:padding="16dp">

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/input_layout_full_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_marginTop="10dp">

                    <EditText
                        android:id="@+id/et_full_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/hint_input_food_name"
                        android:inputType="textCapSentences"
                        android:maxLines="1"
                        android:lines="1"/>
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/input_layout_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_below="@+id/input_layout_full_name"
                    android:layout_marginTop="10dp">

                    <EditText
                        android:id="@+id/et_email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/hint_input_food_description"
                        android:inputType="textMultiLine"/>
                </android.support.design.widget.TextInputLayout>


                <android.support.design.widget.TextInputLayout
                    android:id="@+id/input_layout_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_below="@+id/input_layout_email"
                    android:layout_marginTop="10dp">

                    <EditText
                        android:id="@+id/et_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/hint_input_food_price"
                        android:inputType="numberDecimal"
                        android:text="₫ 0"/>
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/input_layout_confirm_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_below="@+id/input_layout_password"
                    android:layout_marginTop="10dp">

                    <EditText
                        android:id="@+id/et_confirm_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/hint_input_food_quantity"
                        android:inputType="numberDecimal" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/input_layout_address"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_below="@+id/input_layout_confirm_password"
                    android:layout_marginTop="10dp">

                    <EditText
                        android:id="@+id/et_address"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/hint_input_food_address"
                        android:maxLines="1"
                        android:inputType="text"/>
                </android.support.design.widget.TextInputLayout>

            </RelativeLayout>
        </RelativeLayout>
    </ScrollView>


</RelativeLayout>
