<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:card_view="http://schemas.android.com/tools"
    android:background="@color/colorPrimary"
    android:fitsSystemWindows="true">

    <ImageView
        android:layout_marginTop="30dp"
        android:id="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_height="80dp"
        android:layout_alignParentTop="true"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="24dp"
        android:src="@drawable/green_food_logo" />

    <android.support.v7.widget.CardView
        card_view:cardCornerRadius="10dp"
        card_view:cardElevation="10dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        android:layout_below="@id/logo"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="80dp">
        <!-- Email Label -->
        <RelativeLayout
            android:padding="16dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <android.support.design.widget.TextInputLayout
                android:id="@id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp">

                <EditText
                    android:id="@+id/input_phone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Phone number"
                    android:inputType="number" />
            </android.support.design.widget.TextInputLayout>

            <!-- Password Label -->
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/email"
                android:layout_alignParentStart="true"
                android:layout_marginTop="15dp"
                android:id="@+id/textInputLayout">

                <EditText
                    android:id="@+id/input_code"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_verify_code"
                    android:inputType="number" />
            </android.support.design.widget.TextInputLayout>
            <!--Remember me-->
            <android.support.v7.widget.AppCompatButton

                android:id="@+id/btn_send"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:background="@color/colorAccent"
                android:padding="12dp"
                android:text="@string/btn_send_code"
                android:textColor="@color/icons"
                android:layout_marginTop="16dp"
                android:layout_below="@+id/textInputLayout"
                android:layout_alignParentStart="true" />
            <android.support.v7.widget.AppCompatButton

                android:id="@+id/btn_verify"
                android:layout_toRightOf="@id/btn_send"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:background="@color/colorAccent"
                android:padding="12dp"
                android:layout_marginLeft="16dp"
                android:text="@string/btn_verify_code"
                android:textColor="@color/icons"
                android:layout_marginTop="16dp"
                android:layout_below="@+id/textInputLayout" />

            <TextView
                android:id="@+id/link_signup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textColor="@color/secondary_text"
                android:textSize="16sp"
                android:text="@string/no_account"
                android:layout_below="@+id/btn_send"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="15dp" />
        </RelativeLayout>
    </android.support.v7.widget.CardView>
</RelativeLayout>
